Drop JDK 8 support, baseline on JDK 11; fix #358
Signed-off-by: Radoslav Husar <radosoft@gmail.com>